kubernetes-networks/coredns-svc-tcp-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: coredns-svc-tcp-lb
  namespace: kube-system
  annotations:
    metallb.universe.tf/allow-shared-ip: coredns-key
spec:
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
  loadBalancerIP: 172.17.255.5
  ports:
  - protocol: TCP
    port: 53
    targetPort: 53
